<resources>
    <string name="app_name">HereIm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parent_log_title">Login As Parent</string>
    <string name="parent_name">Parent Name</string>
    <string name="parent_number">Parent Phone Number</string>
    <string name="child_log_title">Login As Child</string>
    <string name="child_name">Child Name</string>
    <string name="childphone">Child Phone Number</string>
    <string name="parent_user_id">Parent User ID</string>
    <string name="log_in">Log In</string>
    <string name="PreferenceUserKey">PreferenceUserKey</string>
    <string name="title_activity_core_acitivity">Core Acitivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="switch_child">Switch Child</string>
    <string name="which_child_want_to_monitor">Which Child want to monitor</string>
    <string name="nochildtitle">You have not added any child yet.\n
        Please add at least one child with your user id:</string>

    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <string-array name="action_timespan">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="action_sort">
        <item>Name</item>
        <item>Percentage</item>
    </string-array>
</resources>
