<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_im"
    android:isScrollContainer="true">

    <ImageView
        android:id="@+id/logo_imageview_id"
        android:layout_width="109dp"
        android:layout_height="0dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/childlog_title_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_wrapHeight="66"
        tools:layout_conversion_wrapWidth="66" />

    <TextView
        android:id="@+id/childlog_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/child_log_title"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/child_name_ET_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageview_id"
        tools:layout_conversion_wrapHeight="92"
        tools:layout_conversion_wrapWidth="450" />

    <EditText
        android:id="@+id/child_name_ET_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/parent_name"
        android:hint="@string/child_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textColorHint="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/child_phone_ET_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childlog_title_id"
        tools:layout_conversion_wrapHeight="256"
        tools:layout_conversion_wrapWidth="935" />

    <EditText
        android:id="@+id/child_phone_ET_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="#FFFF"
        android:background="@drawable/parent_phone"
        android:hint="@string/childphone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/parentUserID_ET_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_name_ET_id"
        tools:layout_conversion_wrapHeight="215"
        tools:layout_conversion_wrapWidth="1080" />

    <EditText
        android:id="@+id/parentUserID_ET_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/paren_id"
        android:hint="@string/parent_user_id"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textColorHint="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/child_log_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_phone_ET_id"
        tools:layout_conversion_wrapHeight="217"
        tools:layout_conversion_wrapWidth="850" />

    <Button
        android:id="@+id/child_log_btn_id"
        android:layout_width="184dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/log_in"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentUserID_ET_id"
        tools:layout_conversion_wrapHeight="190"
        tools:layout_conversion_wrapWidth="657" />

</androidx.constraintlayout.widget.ConstraintLayout>
