<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_im">

    <ImageView
        android:id="@+id/logo_imageview_id"
        android:layout_width="119dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/parentLogTitle_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_wrapHeight="63"
        tools:layout_conversion_wrapWidth="63" />

    <TextView
        android:id="@+id/parentLogTitle_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="39dp"
        android:gravity="center"
        android:text="@string/parent_log_title"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/parent_name_ET_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageview_id"
        tools:layout_conversion_wrapHeight="158"
        tools:layout_conversion_wrapWidth="543" />

    <EditText
        android:id="@+id/parent_name_ET_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/parent_name"
        android:hint="Parent Name"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textColorHint="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/parent_phone_ET_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentLogTitle_id"
        tools:layout_conversion_wrapHeight="165"
        tools:layout_conversion_wrapWidth="1080" />

    <EditText
        android:id="@+id/parent_phone_ET_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/parent_phone"
        android:hint="@string/parent_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textColorHint="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/parent_log_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_name_ET_id"
        tools:layout_conversion_wrapHeight="165"
        tools:layout_conversion_wrapWidth="1080" />

    <Button
        android:id="@+id/parent_log_btn_id"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginBottom="153dp"
        android:background="@drawable/log_in"
        android:hint="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textColorHint="#ffff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_phone_ET_id"
        tools:layout_conversion_wrapHeight="223"
        tools:layout_conversion_wrapWidth="1080" />
</androidx.constraintlayout.widget.ConstraintLayout>

